Added getApiVersion endpoint to swagger specs
